# sol

./: Cargo.toml  README.md
src/: camera.rs  frag.glsl  interaction.rs  main.rs  model.rs  solar.rs  vert.glsl
src/shaders/: frag.glsl  vert.glsl
