[package]
name = "gfx"
version = "0.1.0"
authors = ["Michał Sala <0havaker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26"
obj-rs = { version = "0.6", features = ["glium"] }
nalgebra-glm = "0.3"
image = "0.23.12"
